...
		}
	}
	
	var pickerSection: some View {
		
		Section {
			Picker("Watering frequency", selection: $plant.maintenance.watering) {
				ForEach(Watering.allCases) { frequency in
					Text(frequency.description)
				}
			}
			.pickerStyle(.menu)
			// accessibilityIdentifier added for testing purposes
			.accessibilityIdentifier("Watering frequency")

			Picker("Sunlight level", selection: $plant.maintenance.sunLight) {
				ForEach(Sunlight.allCases) { level in
					Text(level.description)
				}
			}
			.pickerStyle(.menu)
			// accessibilityIdentifier added for testing purposes
...
